0.2.3
- add function for creating IMG tags with maxX/maxY/maxArea (#77)

0.2.2
- provide a function to reset all markers (#73)

0.2.1
- Fix: make piVars more secure (#8)

0.2.0
- Fix: there's <tr###CLASS_HEADERROW###> in the list view header (#0003324)

0.1.0
- initial public release as a separate extension